# qmk_firmware

./: .gitignore  pyproject.toml  readme.md
keyboards/splitkb/kyria/keymaps/my_kyria_layout/: rules.mk
