[tool.poetry]
name = "qmk-firmware"
version = "0.1.0"
description = ""
authors = []
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
keymap-drawer = "^0.17.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
